# Compilers-Project

./: .gitignore  CMakeLists.txt  README.md
src/compiler/: compiler.cpp
src/enums/: binaryOperator.h  dataType.h  enums.h  keyword.h  unaryOperator.h
src/grammar/: lexerSpecs.l  parserGrammar.y
src/grammer/: lexerSpecs.l  parserGrammer.y
src/gui/: controller.py  model.py  view.py
src/interpreter/: interpreter.cpp
src/parser/: expressionNode.h  keywordNode.h  node.h  parser.h
src/parser/branches/: caseNode.cpp  caseNode.h  ifNode.cpp  ifNode.h  switchCaseNode.cpp  switchCaseNode.h
src/parser/error/: error.cpp  error.h
src/parser/expressions/: assignmentNode.cpp  assignmentNode.h  binaryOpNode.cpp  binaryOpNode.h  constantNode.cpp  constantNode.h  identifierNode.cpp  identifierNode.h  print.cpp  print.h  printSymbolsNode.cpp  printSymbolsNode.h  unaryOpNode.cpp  unaryOpNode.h
src/parser/functions/: functionArgsNode.cpp  functionArgsNode.h  functionDeclarationNode.cpp  functionDeclarationNode.h  functionExecutionNode.cpp  functionExecutionNode.h  functionParamsNode.cpp  functionParamsNode.h  print.cpp  print.h  returnNode.cpp  returnNode.h
src/parser/loops/: doWhileLoopNode.cpp  doWhileLoopNode.h  forLoopNode.cpp  forLoopNode.h  whileLoopNode.cpp  whileLoopNode.h
src/parser/statements/: assignmentNode.cpp  assignmentNode.h  declarationNode.cpp  declarationNode.h  statementsListNode.cpp  statementsListNode.h
src/symbolTable/: functionSymbol.cpp  functionSymbol.h  primitiveSymbol.cpp  primitiveSymbol.h  primitiveValue.h  symbol.h  symbolTable.cpp  symbolTable.h
tests/: expressions.cpp  function.cpp  if.cpp  loops.cpp  semantic-error.cpp  syntax-error.cpp
